   allow public contests with a limited set of teams and private contests
   with all teams.
 - Upgrade Symfony and dependencies to the latest version.
 - Use Doctrine for migrations and initial data.
 - Add option (enabled by default) to limit files passed to
   language compilers by langauge extension list.
 - Add option to add a whole team category to a contest.

Version 7.0.3 - 11 July 2019
----------------------------
 - Fix printing: disable debugging code.
 - Fix import/export SQL query to run with recent MySQL versions.
 - Make forms more robust against misconfigured application hostname.
 - Fix balloons page showing random balloon results.
 - Fix results.tsv export to always use externalId of team.
 - Fix contest edit form interfering with countdown clock on same page.

Version 7.0.2 - 4 June 2019
---------------------------
 - Fix first-to-solve indicators after applying a rejudging.
 - Fix the public interface when there are no active contests.
 - Fix performance when using the update_judging_seconds option.
 - Fix performance of applying a rejudging.
 - Fix judgedaemon error message on missing chroot.
 - Fix highlighting of own team row in team scoreboard.
 - Fix some title elements on jury submission page.
 - Fix type error on jury Analysis page.

Version 7.0.1 - 6 May 2019
--------------------------
 - Fix affiliation checking in Configration Checker.
 - Improve feedback on errors when uploading problem zip files.
 - Fix adding a team to a contest by editing the team.
 - Fix submitting when sourcefiles_limit is set to 1.

Version 7.0.0 - 28 April 2019
-----------------------------
 - Initial admin password is now generated on database creation, and written
   to etc/initial_admin_password.secret.
 - Rewrite the interface in Symfony and Bootstrap. Add many UI
   improvements in the process.
 - Rewrite API in Symfony, expose Swagger docs.
 - Rewrite jury analysis page.
 - Make interactive problem support more robust.